--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@aws-amplify/ui-react": "^6.5.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
     "aws-amplify": "^6.6.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
