--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arcgis/core": "^4.32.9",
     "@aws-amplify/ui-react": "^6.9.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
